Made very basic html canvas render and NN auto dreams now

--- a/other/preceptron/index.html
+++ b/other/preceptron/index.html
@@ -3,8 +3,12 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
   </head>
   <body style="font-size: small;">
+    <canvas id="canvas2" width="500" height="500"></canvas>
     <!-- Note the usage of `type=module` here as this is an ES6 module -->
     <script type="module">
+      import init, {Network, Test, random_f64_0_1} from './pkg/preceptron.js';
+      import {calc_function_space} from "./function_space.js";
+
       // Use ES module import syntax to import functionality from the module
       // that we have compiled.
       //
@@ -12,9 +16,23 @@
       // will "boot" the module and make it ready to use. Currently browsers
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
-      import init, {Network} from './pkg/preceptron.js';
+      function draw_nn(n1, c_w, c_h, function_space, low_res_scale){
+          const canvas2 = document.getElementById('canvas2');
+          const ctx2 = canvas2.getContext('2d');
+
+          ctx2.fillStyle = 'rgb(0, 0, 0)';
+          ctx2.fillRect(0, 0, c_w, c_h);
+          for(let i = 0; i < c_w / low_res_scale; i++){
+              for(let j = 0; j < c_h / low_res_scale; j++){
+                  let g = n1.feed_forward([function_space[i][j].x,function_space[i][j].y]);
+                  ctx2.fillStyle = `rgb(${g[0] * 255}, ${g[1] * 255}, ${g[2] * 255})`;
+                  ctx2.fillRect(i * low_res_scale, j * low_res_scale, low_res_scale, low_res_scale);
+              }
+          }
+        }
 
       async function run() {
+
         // First up we need to actually load the wasm file, so we use the
         // default export to inform it where the wasm file is located on the
         // server, and then we wait on the returned promise to wait for the
@@ -42,7 +60,22 @@
         // exports which is the same as importing the `*_bg` module in other
         // modes
         await init();
+        let c_w = 500;
+        let c_h = 500;
+        let low_res_scale = 4
+        let function_space = calc_function_space(c_w, c_h, 50, 50, low_res_scale);
 
+        
+        let n = Network.new([2,16,16,3]); 
+        let tweak_ammount = 0.1;
+        for(let i = 0; i < 100000; i++){
+          draw_nn(n, c_w, c_h, function_space, low_res_scale);
+          // n.tw(0.01);
+          // n.tweak_weights(0.005);
+          n.tweak_random_weight(tweak_ammount);
+          tweak_ammount += .001;
+          await new Promise(resolve => setTimeout(resolve, 10));
+        }
         // And afterwards we can use all the functionality defined in wasm.
         // const result = add(1, 2);
         // console.log(`1 + 2 = ${result}`);
